// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JS Components/Expander LongContent smoke-test 1`] = `
<div data-testid="expander-container"
     class="overflow-hidden transition-all relative "
     style="height: 200px;"
>
  <div class="h-64 w-full bg-gradient-to-t from-white to-transparent absolute bottom-0 left-0 right-0 ">
  </div>
  <div>
    <div>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </li>
        <li>
          Sed convallis ex pharetra, tristique tellus vel, rhoncus velit.
        </li>
        <li>
          Mauris molestie felis et scelerisque ullamcorper.
        </li>
        <li>
          Maecenas congue ligula ut commodo tristique.
        </li>
        <li>
          Pellentesque venenatis elit vitae urna condimentum, in mollis arcu venenatis.
        </li>
        <li>
          Donec nec turpis vel urna egestas fringilla.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Mauris ut nibh vel metus cursus semper.
        </li>
        <li>
          Ut mattis tortor eu urna accumsan gravida.
        </li>
        <li>
          Nunc pellentesque neque at elit pretium tempor.
        </li>
        <li>
          Curabitur finibus magna vitae nunc varius fermentum.
        </li>
      </ul>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Curabitur vehicula mi iaculis, luctus augue eu, venenatis quam.
        </li>
        <li>
          Praesent in eros efficitur, consequat ante eu, faucibus arcu.
        </li>
        <li>
          Nulla laoreet nibh a odio interdum, non molestie diam auctor.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Praesent aliquam diam tincidunt, sollicitudin tortor eget, vulputate lacus.
        </li>
        <li>
          Quisque in mi sed ex vulputate varius in a leo.
        </li>
        <li>
          Etiam posuere dolor at tortor aliquam imperdiet.
        </li>
        <li>
          Maecenas quis neque consequat, ultricies est sit amet, congue est.
        </li>
        <li>
          Aenean a elit sed nibh pretium lacinia sed convallis sapien.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Nulla malesuada libero id dolor aliquam, non sagittis mi scelerisque.
        </li>
        <li>
          Etiam tincidunt lacus eu diam laoreet consectetur sit amet non est.
        </li>
        <li>
          In porta arcu nec purus tincidunt vulputate.
        </li>
      </ul>
    </div>
  </div>
</div>
<div tabindex="0"
     data-testid="expander-controls"
     class="mt-16 cursor-pointer font-bold text-gui-blue-default-light hover:text-gui-blue-hover-light "
>
  View all +
</div>
`;

exports[`JS Components/Expander OverriddenContentStyles smoke-test 1`] = `
<div data-testid="expander-container"
     class="overflow-hidden transition-all relative bg-neutral-400 p-16 rounded-lg"
     style="height: 200px;"
>
  <div class="h-64 w-full bg-gradient-to-t from-white to-transparent absolute bottom-0 left-0 right-0 from-neutral-800">
  </div>
  <div>
    <div>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </li>
        <li>
          Sed convallis ex pharetra, tristique tellus vel, rhoncus velit.
        </li>
        <li>
          Mauris molestie felis et scelerisque ullamcorper.
        </li>
        <li>
          Maecenas congue ligula ut commodo tristique.
        </li>
        <li>
          Pellentesque venenatis elit vitae urna condimentum, in mollis arcu venenatis.
        </li>
        <li>
          Donec nec turpis vel urna egestas fringilla.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Mauris ut nibh vel metus cursus semper.
        </li>
        <li>
          Ut mattis tortor eu urna accumsan gravida.
        </li>
        <li>
          Nunc pellentesque neque at elit pretium tempor.
        </li>
        <li>
          Curabitur finibus magna vitae nunc varius fermentum.
        </li>
      </ul>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Curabitur vehicula mi iaculis, luctus augue eu, venenatis quam.
        </li>
        <li>
          Praesent in eros efficitur, consequat ante eu, faucibus arcu.
        </li>
        <li>
          Nulla laoreet nibh a odio interdum, non molestie diam auctor.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Praesent aliquam diam tincidunt, sollicitudin tortor eget, vulputate lacus.
        </li>
        <li>
          Quisque in mi sed ex vulputate varius in a leo.
        </li>
        <li>
          Etiam posuere dolor at tortor aliquam imperdiet.
        </li>
        <li>
          Maecenas quis neque consequat, ultricies est sit amet, congue est.
        </li>
        <li>
          Aenean a elit sed nibh pretium lacinia sed convallis sapien.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Nulla malesuada libero id dolor aliquam, non sagittis mi scelerisque.
        </li>
        <li>
          Etiam tincidunt lacus eu diam laoreet consectetur sit amet non est.
        </li>
        <li>
          In porta arcu nec purus tincidunt vulputate.
        </li>
      </ul>
    </div>
  </div>
</div>
<div tabindex="0"
     data-testid="expander-controls"
     class="mt-16 cursor-pointer font-bold text-gui-blue-default-light hover:text-gui-blue-hover-light "
>
  View all +
</div>
`;

exports[`JS Components/Expander OverriddenControls play-test 1`] = `
<div data-testid="expander-container"
     class="overflow-hidden transition-all relative "
     style="height: 664px;"
>
  <div>
    <div>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </li>
        <li>
          Sed convallis ex pharetra, tristique tellus vel, rhoncus velit.
        </li>
        <li>
          Mauris molestie felis et scelerisque ullamcorper.
        </li>
        <li>
          Maecenas congue ligula ut commodo tristique.
        </li>
        <li>
          Pellentesque venenatis elit vitae urna condimentum, in mollis arcu venenatis.
        </li>
        <li>
          Donec nec turpis vel urna egestas fringilla.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Mauris ut nibh vel metus cursus semper.
        </li>
        <li>
          Ut mattis tortor eu urna accumsan gravida.
        </li>
        <li>
          Nunc pellentesque neque at elit pretium tempor.
        </li>
        <li>
          Curabitur finibus magna vitae nunc varius fermentum.
        </li>
      </ul>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Curabitur vehicula mi iaculis, luctus augue eu, venenatis quam.
        </li>
        <li>
          Praesent in eros efficitur, consequat ante eu, faucibus arcu.
        </li>
        <li>
          Nulla laoreet nibh a odio interdum, non molestie diam auctor.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Praesent aliquam diam tincidunt, sollicitudin tortor eget, vulputate lacus.
        </li>
        <li>
          Quisque in mi sed ex vulputate varius in a leo.
        </li>
        <li>
          Etiam posuere dolor at tortor aliquam imperdiet.
        </li>
        <li>
          Maecenas quis neque consequat, ultricies est sit amet, congue est.
        </li>
        <li>
          Aenean a elit sed nibh pretium lacinia sed convallis sapien.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Nulla malesuada libero id dolor aliquam, non sagittis mi scelerisque.
        </li>
        <li>
          Etiam tincidunt lacus eu diam laoreet consectetur sit amet non est.
        </li>
        <li>
          In porta arcu nec purus tincidunt vulputate.
        </li>
      </ul>
    </div>
  </div>
</div>
<div tabindex="0"
     data-testid="expander-controls"
     class="mt-16 cursor-pointer font-bold text-gui-blue-default-light hover:text-gui-blue-hover-light ui-btn text-white w-full ui-text-p1 border rounded-xl hover:text-white"
>
  <span class="flex items-center gap-8">
    Away with you, knave.
    <svg class="text-pink-500"
         style="width: 24px; height: 24px;"
    >
      <use xlink:href="#sprite-icon-gui-warning">
      </use>
    </svg>
  </span>
</div>
`;

exports[`JS Components/Expander ShortContent smoke-test 1`] = `
<div data-testid="expander-container"
     class="overflow-hidden transition-all relative "
     style="height: auto;"
>
  <div>
    <div>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </li>
        <li>
          Sed convallis ex pharetra, tristique tellus vel, rhoncus velit.
        </li>
        <li>
          Mauris molestie felis et scelerisque ullamcorper.
        </li>
        <li>
          Maecenas congue ligula ut commodo tristique.
        </li>
        <li>
          Pellentesque venenatis elit vitae urna condimentum, in mollis arcu venenatis.
        </li>
        <li>
          Donec nec turpis vel urna egestas fringilla.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`JS Components/Expander ZeroHeightContent smoke-test 1`] = `
<div data-testid="expander-container"
     class="overflow-hidden transition-all relative "
     style="height: 0px;"
>
  <div class="h-64 w-full bg-gradient-to-t from-white to-transparent absolute bottom-0 left-0 right-0 from-transparent">
  </div>
  <div>
    <div>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </li>
        <li>
          Sed convallis ex pharetra, tristique tellus vel, rhoncus velit.
        </li>
        <li>
          Mauris molestie felis et scelerisque ullamcorper.
        </li>
        <li>
          Maecenas congue ligula ut commodo tristique.
        </li>
        <li>
          Pellentesque venenatis elit vitae urna condimentum, in mollis arcu venenatis.
        </li>
        <li>
          Donec nec turpis vel urna egestas fringilla.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Mauris ut nibh vel metus cursus semper.
        </li>
        <li>
          Ut mattis tortor eu urna accumsan gravida.
        </li>
        <li>
          Nunc pellentesque neque at elit pretium tempor.
        </li>
        <li>
          Curabitur finibus magna vitae nunc varius fermentum.
        </li>
      </ul>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Curabitur vehicula mi iaculis, luctus augue eu, venenatis quam.
        </li>
        <li>
          Praesent in eros efficitur, consequat ante eu, faucibus arcu.
        </li>
        <li>
          Nulla laoreet nibh a odio interdum, non molestie diam auctor.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Praesent aliquam diam tincidunt, sollicitudin tortor eget, vulputate lacus.
        </li>
        <li>
          Quisque in mi sed ex vulputate varius in a leo.
        </li>
        <li>
          Etiam posuere dolor at tortor aliquam imperdiet.
        </li>
        <li>
          Maecenas quis neque consequat, ultricies est sit amet, congue est.
        </li>
        <li>
          Aenean a elit sed nibh pretium lacinia sed convallis sapien.
        </li>
      </ul>
      <p>
        Ipsum
      </p>
      <ul class="mb-16 list-inside list-disc">
        <li>
          Nulla malesuada libero id dolor aliquam, non sagittis mi scelerisque.
        </li>
        <li>
          Etiam tincidunt lacus eu diam laoreet consectetur sit amet non est.
        </li>
        <li>
          In porta arcu nec purus tincidunt vulputate.
        </li>
      </ul>
    </div>
  </div>
</div>
<div tabindex="0"
     data-testid="expander-controls"
     class=" cursor-pointer font-bold text-gui-blue-default-light hover:text-gui-blue-hover-light "
>
  View all +
</div>
`;
